[FIX] web: adapt loading indicator z-index
Prior to this commit, some elements could appear above the loading
indicator due to insufficient z-index value, leading to a poor user
experience during loading phases.

This commit adapts the z-index of the loading indicator to ensure it
always appears above other elements, enhancing visibility and feedback
to the user during loading operations.

task-5420571

closes odoo/odoo#240339

--- a/addons/web/static/src/webclient/loading_indicator/loading_indicator.scss
+++ b/addons/web/static/src/webclient/loading_indicator/loading_indicator.scss
@@ -1,6 +1,6 @@
 .o_loading_indicator_wrap {
     left: auto;
-    z-index: $zindex-modal + 1;
+    z-index: $zindex-toast + 1;
 
     .spinner-border {
         --#{$prefix}spinner-height: 1em;
